--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
 $primary-color: #05C7F2;
 $secondary-color: #262A73;
@@ -15,12 +14,6 @@ $bg-color-2: rgb(221, 221, 221);
 
 
 
-*, *:before, *:after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 html {
   height: 100vh;
   width: 100vw;
@@ -29,14 +22,13 @@ html {
   box-sizing: border-box;
   letter-spacing: 1.1px;
   overflow-x: hidden;
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
 }
 
 .body {
-  padding-bottom: 40px;
   color: $bg-color-2;
   background-color: $bg-color-1;
   background-image: linear-gradient(to right, $bg-color-1, $bg-color-2);
-  font-family: 'Poppins', sans-serif;;
 }
 @mixin transition {
   @for $i from 1 through 50 {
