--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -110,7 +110,7 @@ $bg-color-2: rgb(221, 221, 221);
 
 
 .home-card-container {
-    background: linear-gradient(0.25turn, $tertiary-color,$secondary-mint-color, $secondary-color);;
+    background: linear-gradient(0.25turn, $tertiary-color,$secondary-color, $secondary-color);;
     padding-bottom: 5%;
     padding-top: 5%;
 }
