--- a/src/css/Store.scss
+++ b/src/css/Store.scss
@@ -22,8 +22,7 @@ $bg-color-2: rgb(221, 221, 221);
 }
 
 .cart-button {
-  border-radius: 50%;
-  width: 5%;
+  color:black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
