--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,17 +1,15 @@
+$primary-color: #05c7f2;
+$secondary-color: #262a73;
+$tertiary-color: #2e3f8e;
+$accent-color: #1e2159;
 
-$primary-color: #05C7F2;
-$secondary-color: #262A73;
-$tertiary-color: #2E3F8E;
-$accent-color: #1E2159;
+$primary-mint-color: #05c7f2;
+$secondary-mint-color: #0fa644;
+$tertiary-mint-color: #3365a6;
+$accent-mint-color: #03a688;
 
-$primary-mint-color: #05C7F2;
-$secondary-mint-color: #0FA644;
-$tertiary-mint-color: #3365A6;
-$accent-mint-color: #03A688;
-
-$bg-color-1: #F2F2F2;
+$bg-color-1: #f2f2f2;
 $bg-color-2: rgb(221, 221, 221);
-
 
 .container {
   margin-left: 6%;
@@ -38,7 +36,11 @@ html {
 @mixin transition {
   @for $i from 1 through 50 {
     &:nth-child(#{$i}) {
-      transition: transform 1s #{$i * .08}s cubic-bezier(.29,1.4,.44,.96);
+      transition: transform
+        1s
+        #{$i *
+        0.08}s
+        cubic-bezier(0.29, 1.4, 0.44, 0.96);
     }
   }
 }
@@ -78,9 +80,10 @@ $contrast: darken($main, 10%);
   box-sizing: border-box;
   pointer-events: none;
   padding-top: 125px;
-  transition: width 475ms ease-out, transform 450ms ease, border-radius .8s .1s ease;
+  transition: width 475ms ease-out, transform 450ms ease,
+    border-radius 0.8s 0.1s ease;
   border-bottom-left-radius: 100vw;
-  @include alpha-attribute('background-color', rgba($contrast, 0.8), white);
+  @include alpha-attribute("background-color", rgba($contrast, 0.8), white);
   @media (min-width: 768px) {
     width: 40vw;
   }
@@ -111,14 +114,14 @@ $contrast: darken($main, 10%);
       text-align: center;
       display: block;
       padding: 1rem;
-      font-size: calc(24px - .5vw);
+      font-size: calc(24px - 0.5vw);
       @media (min-width: 768px) {
         text-align: right;
-        padding: .5rem;
+        padding: 0.5rem;
       }
       &:hover {
         cursor: pointer;
-        @include alpha-attribute('background-color', rgba($main, 0.5), white);
+        @include alpha-attribute("background-color", rgba($main, 0.5), white);
       }
     }
   }
@@ -129,15 +132,15 @@ input.hamburger {
   display: none;
   &:checked {
     & ~ .drawer-list {
-       transform: translatex(0);
-        border-bottom-left-radius: 0;
-        li {
-          transform: translatex(0);
-          @include transition;
-          a {
-            padding-right: 15px;
-          }
+      transform: translatex(0);
+      border-bottom-left-radius: 0;
+      li {
+        transform: translatex(0);
+        @include transition;
+        a {
+          padding-right: 15px;
         }
+      }
     }
     & ~ label {
       > i {
@@ -175,13 +178,13 @@ label.hamburger {
     close,
     open {
       text-transform: uppercase;
-      font-size: .8em;
+      font-size: 0.8em;
       text-align: center;
       position: absolute;
       transform: translateY(50px);
       text-align: center;
       overflow: hidden;
-      transition: width .25s .35s, color .45s .35s;
+      transition: width 0.25s 0.35s, color 0.45s 0.35s;
     }
     close {
       color: rgba(0, 0, 0, 0);
@@ -200,8 +203,8 @@ label.hamburger {
     top: 50%;
     background-color: $text;
     pointer-events: auto;
-    transition-duration: .35s;
-    transition-delay: .35s;
+    transition-duration: 0.35s;
+    transition-delay: 0.35s;
     &:before,
     &:after {
       position: absolute;
@@ -229,10 +232,6 @@ label.hamburger {
   right: 15px;
 }
 
-
-
-
-
 .fade-enter {
   opacity: 0;
   z-index: 1;
@@ -246,16 +245,13 @@ label.hamburger {
 .btn-primary {
   background-color: $secondary-color;
 }
-.btn-primary:hover{
+.btn-primary:hover {
   background-color: $primary-color;
 }
-
-
 
 .shadowed {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
 
 @media (min-width: 768px) {
   .featurette-heading {
@@ -268,9 +264,6 @@ label.hamburger {
     margin-top: 120px;
   }
 }
-
-
-
 
 $separator-size: 5px;
 $separator-border-style: solid;
@@ -314,16 +307,16 @@ $separator-space-bottom: 50px;
   @include dot();
   position: relative;
   &:before {
-     @include dot();
-     position: absolute;
-     left: -32px;
-     animation: dot-move-left 1s ease-out forwards;
+    @include dot();
+    position: absolute;
+    left: -32px;
+    animation: dot-move-left 1s ease-out forwards;
   }
-    &:after {
-     @include dot();
-     position: absolute;
-     left: 32px;
-     animation: dot-move-right 1s ease-out forwards;
+  &:after {
+    @include dot();
+    position: absolute;
+    left: 32px;
+    animation: dot-move-right 1s ease-out forwards;
   }
 }
 
@@ -344,7 +337,6 @@ $separator-space-bottom: 50px;
   }
 }
 
-
 .separator--dotter {
   border: 0;
   border-bottom: $separator-size dotted $separator-border-color;
@@ -353,134 +345,132 @@ $separator-space-bottom: 50px;
   animation: separator-width 1.5s ease-out forwards;
 }
 
-
 .content {
-   width: 100%;
-   height: 100vh;
-   background-color: $primary-color;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: $primary-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-   .loading {
-      width: 80px;
-      height: 50px;
-      position: relative;
+  .loading {
+    width: 80px;
+    height: 50px;
+    position: relative;
 
-      p {
-         top: 0;
-         padding: 0;
-         margin: 0;
-         color: $secondary-color;
-         animation: text 3.5s ease both infinite;
-         font-size: 12px;
-         letter-spacing: 1px;
+    p {
+      top: 0;
+      padding: 0;
+      margin: 0;
+      color: $secondary-color;
+      animation: text 3.5s ease both infinite;
+      font-size: 12px;
+      letter-spacing: 1px;
 
-         @keyframes text {
-            0% {
-               letter-spacing: 1px;
-               transform: translateX(0px);
-            }
+      @keyframes text {
+        0% {
+          letter-spacing: 1px;
+          transform: translateX(0px);
+        }
 
-            40% {
-               letter-spacing: 2px;
-               transform: translateX(26px);
-            }
+        40% {
+          letter-spacing: 2px;
+          transform: translateX(26px);
+        }
 
-            80% {
-               letter-spacing: 1px;
-               transform: translateX(32px);
-            }
+        80% {
+          letter-spacing: 1px;
+          transform: translateX(32px);
+        }
 
-            90% {
-               letter-spacing: 2px;
-               transform: translateX(0px);
-            }
+        90% {
+          letter-spacing: 2px;
+          transform: translateX(0px);
+        }
 
-            100% {
-               letter-spacing: 1px;
-               transform: translateX(0px);
-            }
-         }
+        100% {
+          letter-spacing: 1px;
+          transform: translateX(0px);
+        }
       }
-      span {
-         background-color: $secondary-color;
-         border-radius: 50px;
-         display: block;
-         height: 16px;
-         width: 16px;
-         bottom: 0;
-         position: absolute;
-         transform: translateX(64px);
-         animation: loading 3.5s ease both infinite;
+    }
+    span {
+      background-color: $secondary-color;
+      border-radius: 50px;
+      display: block;
+      height: 16px;
+      width: 16px;
+      bottom: 0;
+      position: absolute;
+      transform: translateX(64px);
+      animation: loading 3.5s ease both infinite;
 
-         &:before {
-            position: absolute;
-            content: "";
-            width: 100%;
-            height: 100%;
-            background-color: $secondary-color;
-            border-radius: inherit;
-            animation: loading2 3.5s ease both infinite;
-         }
-
-         @keyframes loading {
-            0% {
-               width: 16px;
-               transform: translateX(0px);
-            }
-
-            40% {
-               width: 100%;
-               transform: translateX(0px);
-            }
-
-            80% {
-               width: 16px;
-               transform: translateX(64px);
-            } 
-
-            90% {
-               width: 100%;
-               transform: translateX(0px);
-            }
-
-            100% {
-               width: 16px;
-               transform: translateX(0px);
-            }
-         }
-         @keyframes loading2 {
-            0% {
-               transform: translateX(0px);
-               width: 16px;
-            }
-
-            40% {
-               transform: translateX(0%);
-               width: 80%;
-            }
-
-           80% {
-               width: 100%;
-               transform: translateX(0px);
-            }
-
-            90% {
-               width: 80%;
-            transform: translateX(15px);
-            }
-            100% {
-               transform: translateX(0px);
-               width: 16px;
-            }
-         }
+      &:before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: $secondary-color;
+        border-radius: inherit;
+        animation: loading2 3.5s ease both infinite;
       }
-   }
+
+      @keyframes loading {
+        0% {
+          width: 16px;
+          transform: translateX(0px);
+        }
+
+        40% {
+          width: 100%;
+          transform: translateX(0px);
+        }
+
+        80% {
+          width: 16px;
+          transform: translateX(64px);
+        }
+
+        90% {
+          width: 100%;
+          transform: translateX(0px);
+        }
+
+        100% {
+          width: 16px;
+          transform: translateX(0px);
+        }
+      }
+      @keyframes loading2 {
+        0% {
+          transform: translateX(0px);
+          width: 16px;
+        }
+
+        40% {
+          transform: translateX(0%);
+          width: 80%;
+        }
+
+        80% {
+          width: 100%;
+          transform: translateX(0px);
+        }
+
+        90% {
+          width: 80%;
+          transform: translateX(15px);
+        }
+        100% {
+          transform: translateX(0px);
+          width: 16px;
+        }
+      }
+    }
+  }
 }
 
-
- .centered {
+.centered {
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -491,27 +481,31 @@ $separator-space-bottom: 50px;
   font-size: 50px;
 }
 
+.icon-context {
+  display: inline;
+}
+
 .margin {
   margin-left: 5%;
   margin-right: 5%;
 }
-.small-margin{
+.small-margin {
   margin-left: 3%;
   margin-right: 3%;
 }
 .top-pad {
   padding-top: 5%;
 }
-.padding-left{
+.padding-left {
   padding-left: 5%;
 }
-.padding-right{
+.padding-right {
   padding-right: 5%;
 }
-.margin-right{
+.margin-right {
   margin-right: 5%;
 }
-.margin-left{
+.margin-left {
   margin-left: 5%;
 }
 .margin-top-bottom {
@@ -533,10 +527,7 @@ $separator-space-bottom: 50px;
   margin-top: 5%;
 }
 
-
-
-.raised-box
-{
+.raised-box {
   -moz-box-shadow: -3px -2px 26px #000000;
   -webkit-box-shadow: -3px -2px 26px #000000;
   box-shadow: -3px -2px 26px #000000;
@@ -547,15 +538,25 @@ $separator-space-bottom: 50px;
   border-radius: 50%;
 }
 
-.align-right{
+.align-right {
   float: right;
 }
 
 .page-footer {
-  align-items: center;
-  text-align: center;
-  justify-self: center;
-  justify-content: center;
-  height: 50vh;
-  background: linear-gradient(0.25turn, $tertiary-color,$secondary-color, $secondary-color);
+  height: 40vh;
+  background: linear-gradient(
+    0.25turn,
+    $tertiary-color,
+    $secondary-color,
+    $secondary-color
+  );
+}
+
+.footer-container {
+  padding-top: 5%;
+  height: 10vh;
+  color:white;
+}
+.form-container h2 {
+  color:white;
 }
