--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -1,20 +1,20 @@
-$primary-color: #05C7F2;
-$secondary-color: #262A73;
-$tertiary-color: #2E3F8E;
-$accent-color: #1E2159;
+$primary-color: #05c7f2;
+$secondary-color: #262a73;
+$tertiary-color: #2e3f8e;
+$accent-color: #1e2159;
 
-$primary-mint-color: #05C7F2;
-$secondary-mint-color: #0FA644;
-$tertiary-mint-color: #3365A6;
-$accent-mint-color: #03A688;
+$primary-mint-color: #05c7f2;
+$secondary-mint-color: #0fa644;
+$tertiary-mint-color: #3365a6;
+$accent-mint-color: #03a688;
 
-$bg-color-1: #F2F2F2;
+$bg-color-1: #f2f2f2;
 $bg-color-2: rgb(221, 221, 221);
 
 #header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #logo {
@@ -23,351 +23,353 @@ $bg-color-2: rgb(221, 221, 221);
   font-size: 5vh;
   font-weight: bold;
 }
-	
+
 #menu-icon {
   font-family: Geneva, sans-serif;
   font-size: 6vh;
 }
-	
+
 // hero
 
 .hero {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 100vh;
-	padding: 1em;
-	box-sizing: border-box;
-	color: white;
-	background: center center no-repeat linear-gradient(0.75turn, $primary-color, $tertiary-color, $secondary-color);
-	background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  padding: 1em;
+  box-sizing: border-box;
+  color: white;
+  background: center center no-repeat
+    linear-gradient(0.75turn, $primary-color, $tertiary-color, $secondary-color);
+  background-size: cover;
   box-shadow: 0px 0px 8px 2px #000000;
 }
 
 .hero-title {
-	max-width: 16em;
-	margin: 0;
-	font-size: 12vh;
-	font-weight: bold;
-	line-height: .9;
-    color: white;
+  max-width: 16em;
+  margin: 0;
+  font-size: 12vh;
+  font-weight: bold;
+  line-height: 0.9;
+  color: white;
 }
-	
-	@media only screen and (min-width: 32em) { .hero-title { font-size: 16vh; } }	
+
+@media only screen and (min-width: 32em) {
+  .hero-title {
+    font-size: 16vh;
+  }
+}
 
 .hero-footer {
-	display: flex;
-	margin-bottom: 1em;
+  display: flex;
+  margin-bottom: 1em;
 }
 
 .hero .button {
-	padding: .5em .67em;
-	color: white;
-	text-decoration: none;
-	border: .1em solid white;
+  padding: 0.5em 0.67em;
+  color: white;
+  text-decoration: none;
+  border: 0.1em solid white;
 }
 
 .hero .button:hover {
-    background-color: white;
-    color: black
+  background-color: white;
+  color: black;
 }
-
 
 .particle {
-	position: absolute;
- 	border-radius: 50%;
+  position: absolute;
+  border-radius: 50%;
 }
 @for $i from 1 through 60 {
-	@keyframes particle-animation-#{$i} {
-		100% {
-			transform: translate3d((random(90) * 1vw), (random(90) * 1vh), (random(100) * 1px));
-		}
-	}
-	
-	.particle:nth-child(#{$i}){
-		animation: particle-animation-#{$i} 60s infinite;
-		$size: random(5) + 5 + px;
-		opacity: random(100)/100;
-		height: $size;
-		width: $size;
-		animation-delay: -$i * .2s;
-		transform: translate3d((random(90) * 1vw), (random(90) * 1vh), (random(100) * 1px));
-		background: hsl(random(360), 70%, 50%);
-	}
-}
+  @keyframes particle-animation-#{$i} {
+    100% {
+      transform: translate3d(
+        (random(90) * 1vw),
+        (random(90) * 1vh),
+        (random(100) * 1px)
+      );
+    }
+  }
 
+  .particle:nth-child(#{$i}) {
+    animation: particle-animation-#{$i} 60s infinite;
+    $size: random(5) + 5 + px;
+    opacity: random(100) / 100;
+    height: $size;
+    width: $size;
+    animation-delay: -$i * 0.2s;
+    transform: translate3d(
+      (random(90) * 1vw),
+      (random(90) * 1vh),
+      (random(100) * 1px)
+    );
+    background: hsl(random(360), 70%, 50%);
+  }
+}
 
 .marketing {
-    margin-top: 7%;
-    margin-bottom: 10%;
+  margin-top: 7%;
 }
-
 
 .home-card-container {
-    background: linear-gradient(0.25turn, $tertiary-color,$secondary-color, $secondary-color);
-    padding-bottom: 5%;
-    padding-top: 5%;
+  padding-bottom: 5%;
 }
 
- .home-card {
-    height: 450px;
-    transition: all .2s ease-in-out; 
-    background-color: white;
-    align-items: center;
-    text-align: center;
-  }
-  .home-card img {
-    border-radius: 50%;
-  }
-  
-  .home-card:hover{
-    transform: scale(1.1);
-  }
-  
- 
- .home-card .btn-primary {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    outline: none;
-    border: 0;
-    vertical-align: middle;
-    text-decoration: none;
-    font-size: inherit;
-    font-family: inherit;
-    &.learn-more {
-      font-weight: 600;
-      color: white;
-      text-transform: uppercase;
-      padding: 1em 1.5em;
-      background: $secondary-color;
-      border: 2px solid $primary-color;
-      border-radius: 0.75em;
-      transform-style: preserve-3d;
-      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
-      &::before {
-        position: absolute;
-        content: '';
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: $primary-color;
-        border-radius: inherit;
-        box-shadow: 0 0 0 2px $primary-color, 0 0.625em 0 0  #d9f7cd;
-        transform: translate3d(0, 0.75em, -1em);
-        transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-      }
-      &:hover {
-        background: $primary-color;
-        transform: translate(0, 0.25em);
-        &::before {
-          box-shadow: 0 0 0 2px $primary-color, 0 0.5em 0 0 #d9f7cd;
-          transform: translate3d(0, 0.5em, -1em);
-        }
-      }
-      &:active {
-        background: $primary-color;
-        transform: translate(0em, 0.75em);
-        &::before {
-          box-shadow: 0 0 0 2px $primary-color, 0 0 #d9f7cd;
-          transform: translate3d(0, 0, -1em);
-        }
-      }
-    }
-  }
+.home-card {
+  height: 450px;
+  transition: all 0.2s ease-in-out;
+  background-color: rgb(231, 231, 231);
+  align-items: center;
+  text-align: center;
+}
+.home-card img {
+  border-radius: 50%;
+}
 
- 
- 
- .quote-container {
+.home-card:hover {
+  transform: scale(1.1);
+}
 
-    margin-top: 5%;
-    margin-bottom: 5%;
-    align-items: center;
-    text-align: center;
- 
-  }
-
-  .square-brackets-quote {
-    
-      padding-top: 5%;
-      border:solid 1em #ccc;
-      &:before {
-        content: "";
-      }
-      cite {
-        color:#757575;
-      }
-      > * {
-        position: relative;
-        z-index: 1;
-      }
-    
-  }
-
-  .author {
-      color: black;
-  }
-
-  .quote-wrapper {
-    width: 20vw;
-    height: auto;
-    position: relative;
-  }
-  
-  .text {
-    width: 100%;
-    height: 100%;
-    /*BLUE BG*/
-    background: radial-gradient(
-      ellipse at center,
-      $secondary-color 0%,
-      $tertiary-color 70%,
-      rgba(0, 128, 172, 0) 70.3%
-    );
-    position: relative;
-    margin: 0;
+.home-card .btn-primary {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: inherit;
+  font-family: inherit;
+  &.learn-more {
+    font-weight: 600;
     color: white;
+    text-transform: uppercase;
+    padding: 1em 1.5em;
+    background: $secondary-color;
+    border: 2px solid $primary-color;
+    border-radius: 0.75em;
+    transform-style: preserve-3d;
+    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+      background 150ms cubic-bezier(0, 0, 0.58, 1);
+    &::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: $primary-color;
+      border-radius: inherit;
+      box-shadow: 0 0 0 2px $primary-color, 0 0.625em 0 0 #d9f7cd;
+      transform: translate3d(0, 0.75em, -1em);
+      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+        box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+    }
+    &:hover {
+      background: $primary-color;
+      transform: translate(0, 0.25em);
+      &::before {
+        box-shadow: 0 0 0 2px $primary-color, 0 0.5em 0 0 #d9f7cd;
+        transform: translate3d(0, 0.5em, -1em);
+      }
+    }
+    &:active {
+      background: $primary-color;
+      transform: translate(0em, 0.75em);
+      &::before {
+        box-shadow: 0 0 0 2px $primary-color, 0 0 #d9f7cd;
+        transform: translate3d(0, 0, -1em);
+      }
+    }
   }
-  
-  .text p {
-    height: 100%;
-    font-size: 21px;
-    line-height: 1.25;
-    padding: 0;
-    text-align: center;
-    font-style: italic;
-    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
-  }
-  
-  .text::before {
+}
+
+.quote-container {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  align-items: center;
+  text-align: center;
+}
+
+.square-brackets-quote {
+  padding-top: 5%;
+  border: solid 1em #ccc;
+  &:before {
     content: "";
-    width: 50%;
-    height: 100%;
-    float: left;
-    shape-outside: polygon(
-      0 0,
-      98% 0,
-      50% 6%,
-      23.4% 17.3%,
-      6% 32.6%,
-      0 50%,
-      6% 65.6%,
-      23.4% 82.7%,
-      50% 94%,
-      98% 100%,
-      0 100%
-    );
-    shape-margin: 7%;
   }
-  
-  .text p::before {
-    content: "";
-    width: 50%;
-    height: 100%;
-    float: right;
-    shape-outside: polygon(
-      2% 0%,
-      100% 0%,
-      100% 100%,
-      2% 100%,
-      50% 94%,
-      76.6% 82.7%,
-      94% 65.6%,
-      100% 50%,
-      94% 32.6%,
-      76.6% 17.3%,
-      50% 6%
-    );
-    shape-margin: 7%;
+  cite {
+    color: #757575;
   }
-  
-  .quote-wrapper blockquote footer {
-    width: 100%;
-    position: absolute;
-    font-size: 17px;
-    text-align: center;
-    font-style: italic;
-    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
-  }
-  
-  .quote-wrapper::before {
-    content: "\201C";
-    font-size: 270px;
-    height: 82px;
-    line-height: 0.78;
-    line-height: 1;
-    position: absolute;
-    top: -48px;
-    left: 0;
+  > * {
+    position: relative;
     z-index: 1;
-    font-family: sans-serif, serif;
-    color: #ccc;
-    opacity: 0.9;
   }
-  
-  @media (min-width: 850px) {
-    .quote-wrapper {
-      width: 370px;
-      height: 370px;
-    }
-  
-    .quote-wrapper::before {
-      font-size: 300px;
-    }
-  
-    .text p {
-      font-size: 26px;
-    }
-  
-    .quote-wrapper blockquote footer {
-      bottom: 32px;
-    }
+}
+
+.author {
+  color: black;
+}
+
+.quote-wrapper {
+  width: 20vw;
+  height: auto;
+  position: relative;
+}
+
+.text {
+  width: 100%;
+  height: 100%;
+  /*BLUE BG*/
+  background: radial-gradient(
+    ellipse at center,
+    $secondary-color 0%,
+    $tertiary-color 70%,
+    rgba(0, 128, 172, 0) 70.3%
+  );
+  position: relative;
+  margin: 0;
+  color: white;
+}
+
+.text p {
+  height: 100%;
+  font-size: 21px;
+  line-height: 1.25;
+  padding: 0;
+  text-align: center;
+  font-style: italic;
+  text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
+}
+
+.text::before {
+  content: "";
+  width: 50%;
+  height: 100%;
+  float: left;
+  shape-outside: polygon(
+    0 0,
+    98% 0,
+    50% 6%,
+    23.4% 17.3%,
+    6% 32.6%,
+    0 50%,
+    6% 65.6%,
+    23.4% 82.7%,
+    50% 94%,
+    98% 100%,
+    0 100%
+  );
+  shape-margin: 7%;
+}
+
+.text p::before {
+  content: "";
+  width: 50%;
+  height: 100%;
+  float: right;
+  shape-outside: polygon(
+    2% 0%,
+    100% 0%,
+    100% 100%,
+    2% 100%,
+    50% 94%,
+    76.6% 82.7%,
+    94% 65.6%,
+    100% 50%,
+    94% 32.6%,
+    76.6% 17.3%,
+    50% 6%
+  );
+  shape-margin: 7%;
+}
+
+.quote-wrapper blockquote footer {
+  width: 100%;
+  position: absolute;
+  font-size: 17px;
+  text-align: center;
+  font-style: italic;
+  text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
+}
+
+.quote-wrapper::before {
+  content: "\201C";
+  font-size: 270px;
+  height: 82px;
+  line-height: 0.78;
+  line-height: 1;
+  position: absolute;
+  top: -48px;
+  left: 0;
+  z-index: 1;
+  font-family: sans-serif, serif;
+  color: #ccc;
+  opacity: 0.9;
+}
+
+@media (min-width: 850px) {
+  .quote-wrapper {
+    width: 370px;
+    height: 370px;
   }
 
-  
-
-  .quote-container img {
-    width: 100%;
-    height: auto;
+  .quote-wrapper::before {
+    font-size: 300px;
   }
 
-  .image-container {
-    display: flex;
-    width: 100%;
-    padding: 4% 2%;
-    box-sizing: border-box;
-    height: 100vh;
+  .text p {
+    font-size: 26px;
   }
-  
-  .box {
-    flex: 1;
-    overflow: hidden;
-    transition: .5s;
-    margin: 0 2%;
-    box-shadow: 0 20px 30px rgba(0,0,0,.1);
-    line-height: 0;
+
+  .quote-wrapper blockquote footer {
+    bottom: 32px;
   }
-  
-  .box > img {
-    width: 200%;
-    height: calc(100% - 10vh);
-    object-fit: cover; 
-    transition: .5s;
-  }
-  
-  .box > span {
-    font-size: 3.8vh;
-    display: block;
-    text-align: center;
-    height: 10vh;
-    line-height: 2.6;
-  }
-  
-  .box:hover { flex: 1 1 50%; }
-  .box:hover > img {
-    width: 100%;
-    height: 100%;
-  }
+}
+
+.quote-container img {
+  width: 100%;
+  height: auto;
+}
+
+.image-container {
+  display: flex;
+  width: 100%;
+  padding: 4% 2%;
+  box-sizing: border-box;
+  height: 100vh;
+}
+
+.box {
+  flex: 1;
+  overflow: hidden;
+  transition: 0.5s;
+  margin: 0 2%;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  line-height: 0;
+}
+
+.box > img {
+  width: 200%;
+  height: calc(100% - 10vh);
+  object-fit: cover;
+  transition: 0.5s;
+}
+
+.box > span {
+  font-size: 3.8vh;
+  display: block;
+  text-align: center;
+  height: 10vh;
+  line-height: 2.6;
+}
+
+.box:hover {
+  flex: 1 1 50%;
+}
+.box:hover > img {
+  width: 100%;
+  height: 100%;
+}
